start writing database models and code

--- a/Pipfile
+++ b/Pipfile
@@ -10,6 +10,8 @@ pylint = "*"
 flask = "*"
 jedi = "*"
 flask-wtf = "*"
+flask-sqlalchemy = "*"
+flask-migrate = "*"
 
 [requires]
 python_version = "3.7"
