start adding errors, logging and test cases

--- a/Pipfile
+++ b/Pipfile
@@ -13,6 +13,8 @@ flask-wtf = "*"
 flask-sqlalchemy = "*"
 flask-migrate = "*"
 flask-login = "*"
+email-validator = "*"
+flask-table = "*"
 
 [requires]
 python_version = "3.7"
