--- a/Pipfile
+++ b/Pipfile
@@ -16,6 +16,7 @@ flask-login = "*"
 email-validator = "*"
 flask-table = "*"
 flask-bootstrap = "*"
+python-dotenv = "*"
 
 [requires]
 python_version = "3.7"
